kubernetes/apps/datasci/ray/app/virtualservice.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ray-dashboard
  namespace: datasci
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: istio-system
  hostnames:
  - "ray.istio.local"
  rules:
  - backendRefs:
    - name: ray-external
      port: 8265
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: ray-client-tcp
  namespace: datasci
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: istio-system
    sectionName: ray-client
  rules:
  - backendRefs:
    - name: ray-external
      port: 10001
